--- a/NEURODASH/views/creditos/credito.html
+++ b/NEURODASH/views/creditos/credito.html
@@ -22,26 +22,32 @@
                  <br>
                 <h2>Participantes</h2>
 
-                <p>ANDRES FELIPE TRESPALACIOS</p>
+                <p>ANDRES FELIPE TRESPALACIOS PEREZ</p>
                 <P>BRAYAN SANTIAGO GUERRERO MENDEZ</P>
                 <p>JESUS FERNANDO CARVAJAL ANACONA</p>
                 <p>KAROL NATALIA OSORIO POVEDA</p>
                 <br>
+
                 <h2>Backend</h2>
 
                 <p>BRAYAN SANTIAGO GUERRERO MENDEZ</p>
                 <p>JESUS FERNANDO CARVAJAL ANACONA</p>
                 <br>
+
                 <h2>FRONTEND</h2>
 
+                <p>ANDRES FELIPE TRESPALACIOS PEREZ</p>
                 <p>KAROL NATALIA OSORIO POVEDA</p>
                 <br>
+
                 <h2>DOCUMENTACION</h2>
 
+                <p>ANDRES FELIPE TRESPALACIOS PEREZ</p>
                 <P>BRAYAN SANTIAGO GUERRERO MENDEZ</P>
                 <p>JESUS FERNANDO CARVAJAL ANACONA</p>
                 <p>KAROL NATALIA OSORIO POVEDA</p></p>
                 <br>
+                
                 <h2>Diseño</h2>
                 
                 <p>ARTE, IMAGENES, TIPOGRAFIA Y MOCKUP</p>
