--- a/NEURODASH/assets/css/theme/background.css
+++ b/NEURODASH/assets/css/theme/background.css
@@ -140,3 +140,14 @@
     color: #333;
     overflow: hidden;
 }
+.background-sala{
+    background-image: url(../../img/fondos-pantalla/sala.jpg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    margin: 0;
+    font-family: 'Prompt', sans-serif;
+    color: #333;
+    overflow: hidden;
+}
