--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -68,20 +68,14 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            ¡Bienvenido al desafiante y divertido juego de memoria de los elefantes!
-             Un juego interactivo diseñado para niños y adolescentes, donde pondrás a prueba tu habilidad para recordar secuencias y reaccionar rápidamente. 
              En este juego, los elefantes aparecen y desaparecen en la pantalla, y tu tarea es recordar correctamente las imágenes de los elefantes buenos,
             mientras evitas los que no son correctos.
             <br>
             <br>
-
-            El juego cuenta con varios niveles de dificultad, desde fácil, donde los elefantes se muestran durante más tiempo,
-             hasta difícil, donde la velocidad y la cantidad de imágenes aumenta. Cada vez que selecciones correctamente un elefante,
+              Cada vez que selecciones correctamente un elefante,
               ganarás puntos, pero cuidado: si eliges un elefante incorrecto, perderás puntos.
               <br>
               <br>
-              Desarrolla tus habilidades de memoria mientras te diviertes con los elefantes y compite con tus amigos para alcanzar 
-              la puntuación más alta. ¡Un reto visual y de memoria que te encantará!
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
