--- a/NEURODASH/assets/css/theme/background.css
+++ b/NEURODASH/assets/css/theme/background.css
@@ -141,13 +141,8 @@
     overflow: hidden;
 }
 .background-sala{
-    background-image: url(../../img/fondos-pantalla/sala.jpg);
-    background-size: contain;
+    background-image: url(../../img/fondos-pantalla/propuesta2.png);
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 100%;
-    margin: 0;
-    font-family: 'Prompt', sans-serif;
-    color: #333;
-    overflow: hidden;
 }
