--- a/NEURODASH/assets/css/theme/background.css
+++ b/NEURODASH/assets/css/theme/background.css
@@ -146,3 +146,10 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.backgound-unionSala{
+    background-image: url('../../img/fondos-pantalla/propuesta2.png');
+    background-size: cover; /* cubre todo*/
+    background-repeat: no-repeat;
+    background-position: center; 
+}
